move the logging to use lo library

--- a/glide.yaml
+++ b/glide.yaml
@@ -6,6 +6,9 @@ import:
 - package: golang.org/x/oauth2
 - package: github.com/parnurzeal/gorequest
   version: v0.2.14
+- package: github.com/xchapter7x/lo
+- package: github.com/op/go-logging
+  version: v1
 testImport:
 - package: github.com/onsi/ginkgo
   version: master
