update to vendored dependencies

--- a/glide.yaml
+++ b/glide.yaml
@@ -8,7 +8,7 @@ import:
   version: v0.2.14
 - package: github.com/xchapter7x/lo
 - package: github.com/op/go-logging
-  version: v1
+  version: master
 testImport:
 - package: github.com/onsi/ginkgo
   version: master
