--- a/glide.yaml
+++ b/glide.yaml
@@ -1,10 +1,11 @@
 package: github.com/pivotalservices/firehose-to-loginsight
 import:
 - package: github.com/cloudfoundry-community/firehose-to-syslog
-  version: master
+  version: 3.0.0
 - package: gopkg.in/alecthomas/kingpin.v2
 - package: golang.org/x/oauth2
 - package: github.com/cloudfoundry-community/go-cfclient
+  version: 7b15efc43291ece6f107ed34f9684ff5f6454de3
 - package: github.com/cloudfoundry/sonde-go
   version: master
   subpackages:
@@ -19,6 +20,11 @@ import:
   version: master
 - package: golang.org/x/net
   version: master
+- package: github.com/sirupsen/logrus
+  version: 61e43dc76f7ee59a82bdf3d71033dc12bea4c77d
+- package: github.com/Sirupsen/logrus
+  repo: https://github.com/sirupsen/logrus
+  version: 61e43dc76f7ee59a82bdf3d71033dc12bea4c77d
 testImport:
 - package: github.com/onsi/ginkgo
   version: master
