--- a/wercker.yml
+++ b/wercker.yml
@@ -16,17 +16,12 @@ build:
           export GO15VENDOREXPERIMENT=1
           cd $WERCKER_SOURCE_DIR
           go version
-          wget https://github.com/Masterminds/glide/releases/download/v0.11.1/glide-v0.11.1-linux-amd64.tar.gz
-          tar xvzf glide-v0.11.1-linux-amd64.tar.gz
-          export PATH=./linux-amd64:$PATH
-          export PATH=$WERCKER_SOURCE_DIR/bin:$PATH
-          glide install --strip-vendor --strip-vcs
 
     # Test the project
     - script:
         name: go test
         code: |
-          LOG_LEVEL=debug go test $(glide novendor) -v -cover -race
+          LOG_LEVEL=debug go test ./... -v -cover -race
 
 crosscompile:
   steps:
@@ -39,11 +34,6 @@ crosscompile:
           export GO15VENDOREXPERIMENT=1
           cd $WERCKER_SOURCE_DIR
           go version
-          wget https://github.com/Masterminds/glide/releases/download/v0.11.1/glide-v0.11.1-linux-amd64.tar.gz
-          tar xvzf glide-v0.11.1-linux-amd64.tar.gz
-          export PATH=./linux-amd64:$PATH
-          export PATH=$WERCKER_SOURCE_DIR/bin:$PATH
-          glide install --strip-vendor --strip-vcs
     - script:
         name: set release id variable and version
         code: |
@@ -54,7 +44,7 @@ crosscompile:
     - script:
         name: cross platform release
         code: |
-          (GOOS=linux GOARCH=amd64 go build -o firehose-to-loginsight -ldflags "-X main.VERSION=${NEXT_VERSION}")
+          (GOOS=linux GOARCH=amd64 go build -trimpath -o firehose-to-loginsight -ldflags "-X main.VERSION=${NEXT_VERSION}")
 
     - script:
         name: add repo to artifact
